<resources>
    <string name="app_name">HospitalApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="my_text"><u>Forget Password?</u></string>
    <string name="employee">Employee</string>
    <string name="tasks">Tasks</string>
    <string name="attendance_leaving">attendance - leaving</string>
    <string name="reports">Reports</string>
    <string name="search_for_employee">Search for Employee</string>
    <string name="doctor">Doctor</string>
    <string name="new_user">New User</string>
    <string name="last_name">Last name</string>

    <string name="first_name">First name</string>
    <string name="gender">Gender</string>
    <string name="specialist">Specialist</string>
    <string name="statues">Statues</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="passworddd">Password</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="create_user">Create User</string>
    <string name="loading">Loading..</string>
</resources>